python-compiler/tests/snapshots/bitwise__bitwise_all_ones.snap
---
source: tests/bitwise.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.2 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.3 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.4 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.5 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.6 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %x = alloca i64, align 8
  store i64 9221120237041090815, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %tag_bits = and i64 %x1, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float, i64 1, i64 %map_list
  %check_qnan2 = and i64 %x1, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float3, double %i64_to_f64, double %payload_to_f64
  %lhs_to_int = fptosi double %final_payload to i64
  %and = and i64 %lhs_to_int, 255
  %int_payload = and i64 %and, 281474976710655
  %pyobject_int = or i64 9221120237041090560, %int_payload
  %check_qnan4 = and i64 %pyobject_int, 9221120237041090560
  %is_float5 = icmp ne i64 %check_qnan4, 9221120237041090560
  %tag_bits6 = and i64 %pyobject_int, 1970324836974592
  %tag7 = lshr i64 %tag_bits6, 48
  %is_bool8 = icmp eq i64 %tag7, 1
  %is_string9 = icmp eq i64 %tag7, 2
  %is_list10 = icmp eq i64 %tag7, 3
  %map_bool11 = select i1 %is_bool8, i64 2, i64 %tag7
  %map_string12 = select i1 %is_string9, i64 3, i64 %map_bool11
  %map_list13 = select i1 %is_list10, i64 4, i64 %map_string12
  %final_tag14 = select i1 %is_float5, i64 1, i64 %map_list13
  %check_qnan15 = and i64 %pyobject_int, 9221120237041090560
  %is_float16 = icmp ne i64 %check_qnan15, 9221120237041090560
  %i64_to_f6417 = bitcast i64 %pyobject_int to double
  %extract_payload18 = and i64 %pyobject_int, 281474976710655
  %sign_bit19 = lshr i64 %extract_payload18, 47
  %is_negative20 = icmp eq i64 %sign_bit19, 1
  %sign_extend21 = or i64 %extract_payload18, -281474976710656
  %signed_payload22 = select i1 %is_negative20, i64 %sign_extend21, i64 %extract_payload18
  %payload_to_f6423 = sitofp i64 %signed_payload22 to double
  %final_payload24 = select i1 %is_float16, double %i64_to_f6417, double %payload_to_f6423
  %is_int = icmp eq i64 %final_tag14, 0
  %is_string25 = icmp eq i64 %final_tag14, 3
  br i1 %is_string25, label %print_string, label %check_int

check_int:                                        ; preds = %entry
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload24 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload24)
  br label %print_end

print_string:                                     ; preds = %entry
  %extract_ptr_payload = and i64 %pyobject_int, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  %x26 = load i64, ptr %x, align 4
  %check_qnan27 = and i64 %x26, 9221120237041090560
  %is_float28 = icmp ne i64 %check_qnan27, 9221120237041090560
  %tag_bits29 = and i64 %x26, 1970324836974592
  %tag30 = lshr i64 %tag_bits29, 48
  %is_bool31 = icmp eq i64 %tag30, 1
  %is_string32 = icmp eq i64 %tag30, 2
  %is_list33 = icmp eq i64 %tag30, 3
  %map_bool34 = select i1 %is_bool31, i64 2, i64 %tag30
  %map_string35 = select i1 %is_string32, i64 3, i64 %map_bool34
  %map_list36 = select i1 %is_list33, i64 4, i64 %map_string35
  %final_tag37 = select i1 %is_float28, i64 1, i64 %map_list36
  %check_qnan38 = and i64 %x26, 9221120237041090560
  %is_float39 = icmp ne i64 %check_qnan38, 9221120237041090560
  %i64_to_f6440 = bitcast i64 %x26 to double
  %extract_payload41 = and i64 %x26, 281474976710655
  %sign_bit42 = lshr i64 %extract_payload41, 47
  %is_negative43 = icmp eq i64 %sign_bit42, 1
  %sign_extend44 = or i64 %extract_payload41, -281474976710656
  %signed_payload45 = select i1 %is_negative43, i64 %sign_extend44, i64 %extract_payload41
  %payload_to_f6446 = sitofp i64 %signed_payload45 to double
  %final_payload47 = select i1 %is_float39, double %i64_to_f6440, double %payload_to_f6446
  %lhs_to_int48 = fptosi double %final_payload47 to i64
  %or = or i64 %lhs_to_int48, 0
  %int_payload49 = and i64 %or, 281474976710655
  %pyobject_int50 = or i64 9221120237041090560, %int_payload49
  %check_qnan51 = and i64 %pyobject_int50, 9221120237041090560
  %is_float52 = icmp ne i64 %check_qnan51, 9221120237041090560
  %tag_bits53 = and i64 %pyobject_int50, 1970324836974592
  %tag54 = lshr i64 %tag_bits53, 48
  %is_bool55 = icmp eq i64 %tag54, 1
  %is_string56 = icmp eq i64 %tag54, 2
  %is_list57 = icmp eq i64 %tag54, 3
  %map_bool58 = select i1 %is_bool55, i64 2, i64 %tag54
  %map_string59 = select i1 %is_string56, i64 3, i64 %map_bool58
  %map_list60 = select i1 %is_list57, i64 4, i64 %map_string59
  %final_tag61 = select i1 %is_float52, i64 1, i64 %map_list60
  %check_qnan62 = and i64 %pyobject_int50, 9221120237041090560
  %is_float63 = icmp ne i64 %check_qnan62, 9221120237041090560
  %i64_to_f6464 = bitcast i64 %pyobject_int50 to double
  %extract_payload65 = and i64 %pyobject_int50, 281474976710655
  %sign_bit66 = lshr i64 %extract_payload65, 47
  %is_negative67 = icmp eq i64 %sign_bit66, 1
  %sign_extend68 = or i64 %extract_payload65, -281474976710656
  %signed_payload69 = select i1 %is_negative67, i64 %sign_extend68, i64 %extract_payload65
  %payload_to_f6470 = sitofp i64 %signed_payload69 to double
  %final_payload71 = select i1 %is_float63, double %i64_to_f6464, double %payload_to_f6470
  %is_int72 = icmp eq i64 %final_tag61, 0
  %is_string73 = icmp eq i64 %final_tag61, 3
  br i1 %is_string73, label %print_string77, label %check_int74

check_int74:                                      ; preds = %print_end
  br i1 %is_int72, label %print_int75, label %print_float76

print_int75:                                      ; preds = %check_int74
  %to_int79 = fptosi double %final_payload71 to i64
  %printf_int80 = call i32 (ptr, ...) @printf(ptr @int_format_string.1, i64 %to_int79)
  br label %print_end78

print_float76:                                    ; preds = %check_int74
  %printf_float81 = call i32 (ptr, ...) @printf(ptr @float_format_string.2, double %final_payload71)
  br label %print_end78

print_string77:                                   ; preds = %print_end
  %extract_ptr_payload82 = and i64 %pyobject_int50, 281474976710655
  %payload_to_ptr83 = inttoptr i64 %extract_ptr_payload82 to ptr
  %printf_string84 = call i32 (ptr, ...) @printf(ptr @string_format_string.3, ptr %payload_to_ptr83)
  br label %print_end78

print_end78:                                      ; preds = %print_string77, %print_float76, %print_int75
  %x85 = load i64, ptr %x, align 4
  %x86 = load i64, ptr %x, align 4
  %check_qnan87 = and i64 %x85, 9221120237041090560
  %is_float88 = icmp ne i64 %check_qnan87, 9221120237041090560
  %tag_bits89 = and i64 %x85, 1970324836974592
  %tag90 = lshr i64 %tag_bits89, 48
  %is_bool91 = icmp eq i64 %tag90, 1
  %is_string92 = icmp eq i64 %tag90, 2
  %is_list93 = icmp eq i64 %tag90, 3
  %map_bool94 = select i1 %is_bool91, i64 2, i64 %tag90
  %map_string95 = select i1 %is_string92, i64 3, i64 %map_bool94
  %map_list96 = select i1 %is_list93, i64 4, i64 %map_string95
  %final_tag97 = select i1 %is_float88, i64 1, i64 %map_list96
  %check_qnan98 = and i64 %x86, 9221120237041090560
  %is_float99 = icmp ne i64 %check_qnan98, 9221120237041090560
  %tag_bits100 = and i64 %x86, 1970324836974592
  %tag101 = lshr i64 %tag_bits100, 48
  %is_bool102 = icmp eq i64 %tag101, 1
  %is_string103 = icmp eq i64 %tag101, 2
  %is_list104 = icmp eq i64 %tag101, 3
  %map_bool105 = select i1 %is_bool102, i64 2, i64 %tag101
  %map_string106 = select i1 %is_string103, i64 3, i64 %map_bool105
  %map_list107 = select i1 %is_list104, i64 4, i64 %map_string106
  %final_tag108 = select i1 %is_float99, i64 1, i64 %map_list107
  %check_qnan109 = and i64 %x85, 9221120237041090560
  %is_float110 = icmp ne i64 %check_qnan109, 9221120237041090560
  %i64_to_f64111 = bitcast i64 %x85 to double
  %extract_payload112 = and i64 %x85, 281474976710655
  %sign_bit113 = lshr i64 %extract_payload112, 47
  %is_negative114 = icmp eq i64 %sign_bit113, 1
  %sign_extend115 = or i64 %extract_payload112, -281474976710656
  %signed_payload116 = select i1 %is_negative114, i64 %sign_extend115, i64 %extract_payload112
  %payload_to_f64117 = sitofp i64 %signed_payload116 to double
  %final_payload118 = select i1 %is_float110, double %i64_to_f64111, double %payload_to_f64117
  %check_qnan119 = and i64 %x86, 9221120237041090560
  %is_float120 = icmp ne i64 %check_qnan119, 9221120237041090560
  %i64_to_f64121 = bitcast i64 %x86 to double
  %extract_payload122 = and i64 %x86, 281474976710655
  %sign_bit123 = lshr i64 %extract_payload122, 47
  %is_negative124 = icmp eq i64 %sign_bit123, 1
  %sign_extend125 = or i64 %extract_payload122, -281474976710656
  %signed_payload126 = select i1 %is_negative124, i64 %sign_extend125, i64 %extract_payload122
  %payload_to_f64127 = sitofp i64 %signed_payload126 to double
  %final_payload128 = select i1 %is_float120, double %i64_to_f64121, double %payload_to_f64127
  %lhs_to_int129 = fptosi double %final_payload118 to i64
  %rhs_to_int = fptosi double %final_payload128 to i64
  %xor = xor i64 %lhs_to_int129, %rhs_to_int
  %int_payload130 = and i64 %xor, 281474976710655
  %pyobject_int131 = or i64 9221120237041090560, %int_payload130
  %check_qnan132 = and i64 %pyobject_int131, 9221120237041090560
  %is_float133 = icmp ne i64 %check_qnan132, 9221120237041090560
  %tag_bits134 = and i64 %pyobject_int131, 1970324836974592
  %tag135 = lshr i64 %tag_bits134, 48
  %is_bool136 = icmp eq i64 %tag135, 1
  %is_string137 = icmp eq i64 %tag135, 2
  %is_list138 = icmp eq i64 %tag135, 3
  %map_bool139 = select i1 %is_bool136, i64 2, i64 %tag135
  %map_string140 = select i1 %is_string137, i64 3, i64 %map_bool139
  %map_list141 = select i1 %is_list138, i64 4, i64 %map_string140
  %final_tag142 = select i1 %is_float133, i64 1, i64 %map_list141
  %check_qnan143 = and i64 %pyobject_int131, 9221120237041090560
  %is_float144 = icmp ne i64 %check_qnan143, 9221120237041090560
  %i64_to_f64145 = bitcast i64 %pyobject_int131 to double
  %extract_payload146 = and i64 %pyobject_int131, 281474976710655
  %sign_bit147 = lshr i64 %extract_payload146, 47
  %is_negative148 = icmp eq i64 %sign_bit147, 1
  %sign_extend149 = or i64 %extract_payload146, -281474976710656
  %signed_payload150 = select i1 %is_negative148, i64 %sign_extend149, i64 %extract_payload146
  %payload_to_f64151 = sitofp i64 %signed_payload150 to double
  %final_payload152 = select i1 %is_float144, double %i64_to_f64145, double %payload_to_f64151
  %is_int153 = icmp eq i64 %final_tag142, 0
  %is_string154 = icmp eq i64 %final_tag142, 3
  br i1 %is_string154, label %print_string158, label %check_int155

check_int155:                                     ; preds = %print_end78
  br i1 %is_int153, label %print_int156, label %print_float157

print_int156:                                     ; preds = %check_int155
  %to_int160 = fptosi double %final_payload152 to i64
  %printf_int161 = call i32 (ptr, ...) @printf(ptr @int_format_string.4, i64 %to_int160)
  br label %print_end159

print_float157:                                   ; preds = %check_int155
  %printf_float162 = call i32 (ptr, ...) @printf(ptr @float_format_string.5, double %final_payload152)
  br label %print_end159

print_string158:                                  ; preds = %print_end78
  %extract_ptr_payload163 = and i64 %pyobject_int131, 281474976710655
  %payload_to_ptr164 = inttoptr i64 %extract_ptr_payload163 to ptr
  %printf_string165 = call i32 (ptr, ...) @printf(ptr @string_format_string.6, ptr %payload_to_ptr164)
  br label %print_end159

print_end159:                                     ; preds = %print_string158, %print_float157, %print_int156
  ret i32 0
}

declare i32 @printf(ptr, ...)
